<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">
    <restriction
        android:key="api_key"
        android:restrictionType="string"
        android:title="@string/managed_config_api_key_title" />

    <restriction
        android:key="device_id"
        android:restrictionType="string"
        android:title="@string/managed_config_device_id_title" />

    <restriction
        android:key="uuid"
        android:restrictionType="string"
        android:title="@string/managed_config_uuid_title" />

    <restriction
        android:key="role_one_label"
        android:restrictionType="string"
        android:title="@string/managed_config_role_one_label_title" />

    <restriction
        android:key="role_two_label"
        android:restrictionType="string"
        android:title="@string/managed_config_role_two_label_title" />

    <restriction
        android:key="role_one_group_id"
        android:restrictionType="string"
        android:title="@string/managed_config_role_one_group_title" />

    <restriction
        android:key="role_two_group_id"
        android:restrictionType="string"
        android:title="@string/managed_config_role_two_group_title" />

    <restriction
        android:key="role_one_password"
        android:restrictionType="string"
        android:title="@string/managed_config_role_one_password_title" />

    <restriction
        android:key="role_two_password"
        android:restrictionType="string"
        android:title="@string/managed_config_role_two_password_title" />

</restrictions>
